Fixes and organization

--- a/portal_renderer/Cargo.toml
+++ b/portal_renderer/Cargo.toml
@@ -9,4 +9,5 @@ default-run = "portal_renderer"
 [dependencies]
 bevy = { version="0.10.1", default_features=false }
 bevy_pixels = {version="0.10.0", features=["wayland"]}
+portal_common = {path="../portal_common"}
 rand = "0.8.5"
