--- a/portal_common/Cargo.toml
+++ b/portal_common/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version="0.10.1", default_features=false }
+bevy = { version="0.10.1" }
+bevy_pixel_buffer = {version="0.4", features=["rayon", "egui"]}
